--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "laravelcollective/html": "^6.4",
-        "tcg/voyager": "^1.6"
+        "tcg/voyager": "^1.6",
+        "unisharp/laravel-filemanager": "^2.6"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
