--- a/.env
+++ b/.env
@@ -18,6 +18,10 @@ DB_PASSWORD=password
 WWWUSER=1000
 WWWGROUP=1000
 
+APP_PORT=8080
+MYSQL_PORT=3308
+REDIS_PORT=6380
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=redis
 FILESYSTEM_DISK=local
