--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -30,9 +30,9 @@ services:
     mysql:
         image: 'mysql/mysql-server:8.0'
         ports:
-            - '${FORWARD_DB_PORT:-3306}:3306'
+            - '${MYSQL_PORT:-3306}:3306'
         expose:
-            - '${FORWARD_DB_PORT:-3306}'
+            - '${MYSQL_PORT:-3306}'
         environment:
             MYSQL_ROOT_PASSWORD: '${DB_PASSWORD}'
             MYSQL_ROOT_HOST: "%"
@@ -51,7 +51,7 @@ services:
     redis:
         image: 'redis:alpine'
         ports:
-            - '${FORWARD_REDIS_PORT:-6379}:6379'
+            - '${REDIS_PORT:-6379}:6379'
         volumes:
             - './data/sail-redis:/data'
         networks:
